src/tests/ci/assignment_5_functions/valid/18_multiple_headers.c
#include <stdio.h>
#include "math.h"
#include "utils.h"
#include "math.h"

int main() {
    int a = square(3);
    int b = add(2, 3);
    int c = multiply(4, 5);
    printf("Results: %d %d %d\n", a, b, c);
    return 0;
}