src/tests/ci/assignment_5_functions/invalid_semantic/15_function_too_many_args.c
int add(int a, int b) {
    return a + b;
}

int main() {
    int result = add(1, 2, 3);  // 3 args, expects 2
    return result;
}